--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "project",
+  "name": "chat-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "5.21.1",
-    "@types/node": "^22.7.6",
-    "dotenv": "^16.4.5",
-    "prisma": "^5.21.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "start:be": "npm run start --workspace=backend",
+    "start:fe": "npm run start --workspace=frontend",
+    "dev:be": "npm run dev --workspace=backend",
+    "dev:fe": "npm run dev --workspace=frontend",
+    "build": "npm run build --workspaces"
   }
 }
